wip: fix readme errors. add: cose btn overlapping styles

--- a/src/app/containers/contact/contact.component.scss
+++ b/src/app/containers/contact/contact.component.scss
@@ -1,6 +1,8 @@
 .closeBtn {
+    position: relative;
     font-size: 2em;
     cursor: pointer;
+    z-index: 1;
 }
 
 .formDataDisplay {
